static/environment.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    color: rgb(255, 255, 255);
}

body, html {
    width: 100%;
    height: 100%;
    display: flex;
    background-color: #0B0C10;
}

main {
    display: flex;
    flex-direction: column;
    flex-basis: 50%;
    flex-grow: 0;
    flex-shrink: 1;
}

#position {
    position: absolute;
    user-select: none;
    pointer-events: none;
    z-index: 100;
    color: #0B0C10;
}

canvas {
    width: 100%;
    height: 100%;
}

aside {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    flex-basis: 25%;
    flex-grow: 1;
    background-color: #0B0C10;
}

.wrapper {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
}

section {
    display: flex;
    flex-wrap: wrap;
    padding: 2px 4px;
    background-color: #1F2833;
}

.collapsible {
    font-size: 1.09em;
    padding: 24px 0;
    border:solid #45A29E 4px;
    background-color: #0B0C10;
}

.collapsible:hover {
    border:solid #66FCF1 4px
}

.active_collapsible {
    border:solid #66FCF1 4px
}

.option {
    flex-basis: 100%;
    padding: 16px 0;
    margin: 2px 0;
    text-align: center;
    border: solid #0B0C10 4px;
    border-radius: 8px;
}

.option:hover {
    border: solid #45A29E 4px;
}

.option:active {
    border:solid #66FCF1 4px
}

.active_option {
    border: solid #45A29E 4px;
}

p {
    flex-basis: 100%;
    flex-grow: 1;
    font-size: 1.06em;
    margin: 4px 0 4px 0;
}

output {
    flex-basis: 100%;
    flex-grow: 1;
    font-size: 1.06em;
    margin: 4px 0 4px 0;
}

label {
    flex-basis: 50%;
    flex-grow: 1;
    font-size: 1.06em;
    margin: 4px 0 4px 0;
}

input, select {
    background-color: #333C46;
    flex-basis: 100%;
    font-size: 1.06em;
    border-radius: 8px;
    padding: 8px 8px;
    border: none;
    outline: none;
}

button {
    cursor: pointer;
    background-color: #333C46;
}

.execute {
    flex-basis: 100%;
    padding: 8px 8px;
    border-radius: 8px;
    margin: 8px 0;
    border: solid #0B0C10 4px;
}

.execute:hover {
    border: solid #45A29E 4px;
}

